new requirements updated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>simplirewards</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="assets/css/Article-Clean.css">
@@ -25,30 +24,44 @@
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#about">About</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#heading">Heading</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#services">Services</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Services</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#heading">Clients</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Engagment</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#">About</a></li>
                 </ul>
         </div>
         </div>
     </nav>
-    <div data-bs-parallax-bg="true" style="height:630px;background-image:url(&quot;assets/img/background.jpg&quot;);background-position:center;background-size:cover;">
-        <div style="height:100%;width:100%;background-color:rgba(103,103,103,0.46);padding-top:300px;padding-bottom:auto;">
-            <h1 class="text-center">title text</h1>
-            <p class="text-center">short discription of something</p>
-        </div>
+    <div style="height:100%;width:100%;background-color:rgb(98,2,255);padding-top:200px;padding-bottom:200px;color:rgb(234,234,235);">
+        <h1 class="text-left">What is your Best Competitive Advantage?<br></h1>
+        <h1 class="text-left">What are the Key Pillars of your business sustenance?<br></h1>
+        <h1 class="text-left">How would you see Future of your business?<br></h1>
     </div>
-    <div class="align-content-center container" id="about" style="width:100%;height:100%;padding-top:60px;">
-        <h1 class="text-center" style="color:#ec3386;">About</h1>
-        <p class="lead text-center" style="margin-right:auto;margin-left:auto;color:rgb(75,76,77);"><br>Simplirewards is a hub of passionate ‘customer’ centric individuals who are bonded with one single goal of making Customer Experience the competitive advantage for its clients. Simplirewards is firmly rooted in delivering not just strategic
-            roadmaps but also the implementation ecosystem with defined and measurable milestones.We believe and practice the outside-in approach that focuses on human-centric design in all our services. What’s more, we also offer on-ground implementation
-            of the services roadmap that can be executed in modules.So while an organization has a visibility of entire roadmap, the modular approach helps you to allocate appropriate resources and not overburden existing stakeholders or processes. It
-            also offers you better control over the planning, launch, and measurements. Speak with us today to understand how it can be done in your organization.<br><br><br></p>
+    <div id="services" class="features-blue" style="background-color:#0088a6;">
+        <div class="container">
+            <div class="intro">
+                <h2 class="text-center">Services</h2>
+            </div>
+            <div class="row features">
+                <div class="col-sm-6 col-md-4 item" style="padding-left:40px;">
+                    <h3 class="name">Customer Experience</h3>
+                    <p class="description">Customer Experience Assessment <br>Customer Experience Management <br>Customer Experience Training <br>VoC (Voice of Customer) / CSAT Programs</p>
+                </div>
+                <div class="col-sm-6 col-md-4 item" style="padding-left:40px;">
+                    <h3 class="name">Loyalty &amp; Rewards Program</h3>
+                    <p class="description">Loyalty Program Audits <br>Loyalty Program strategy, planning &amp; management <br>Rewards management</p>
+                </div>
+                <div class="col-sm-6 col-md-4 item" style="padding-left:40px;">
+                    <h3 class="name">Data &amp; Campain Management</h3>
+                    <p class="description">Customer acquisition, up-sell, cross-sell, retention and referral programs <br>Data management and data analytics</p>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="heading" class="photo-gallery" style="padding-top:30px;">
         <div class="container">
             <div class="intro" style="/*width:700px;*//*margin-right:306px;*/">
-                <h1 class="text-center" style="color:#ec3386;">Heading</h1>
+                <h1 class="text-center" style="color:#0088a6;">Clients</h1>
             </div>
             <div class="row photos">
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item"><img class="img-fluid" src="assets/img/desk.jpg"></div>
@@ -57,26 +70,72 @@
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item"><img class="img-fluid" src="assets/img/building.jpg"></div>
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item"><img class="img-fluid" src="assets/img/loft.jpg"></div>
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item"><img class="img-fluid" src="assets/img/desk.jpg"></div>
+                <div class="col-4 offset-5"><button class="btn btn-outline-primary" type="button" style="width:144px;">And more</button></div>
             </div>
         </div>
     </div>
-    <div id="services" class="features-blue" style="background-color:rgb(236,51,134);">
-        <div class="container">
-            <div class="intro">
-                <h2 class="text-center">Services</h2>
+    <div style="margin-top:20px;">
+        <div class="row" style="margin-right:0px;margin-left:0px;">
+            <div class="col-5" style="padding:0px;background-color:#0088a6;">
+                <h1 style="padding:50px;padding-top:20px;padding-bottom:20px;background-color:rgba(255,255,255,0);color:rgb(255,255,255);"><br><strong>Engagement</strong><br><strong>Models</strong><br><br></h1>
             </div>
-            <div class="row features">
-                <div class="col-sm-6 col-md-4 item"><i class="fa fa-user icon" style="color:rgb(255,255,255);"></i>
-                    <h3 class="name">Customer Experience</h3>
-                    <p class="description">Customer Experience Assessment <br>Customer Experience Management <br>Customer Experience Training <br>VoC (Voice of Customer) / CSAT Programs</p>
+            <div class="col" style="padding:20px0px;padding-top:20px;padding-bottom:20px;padding-left:20px;background-color:#565656;padding-right:20px;width:100%;">
+                <div class="row" style="margin-right:0px;margin-left:0px;">
+                    <div class="col-5">
+                        <h3 style="color:rgb(255,255,255);">Turnkey</h3>
+                    </div>
+                    <div class="col">
+                        <p style="color:rgb(255,255,255);">End-to-End ProjectManagement<br></p>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><i class="fa fa-asterisk icon" style="color:rgb(255,255,255);"></i>
-                    <h3 class="name">Loyalty &amp; Rewards Program</h3>
-                    <p class="description">Loyalty Program Audits <br>Loyalty Program strategy, planning &amp; management <br>Rewards management</p>
+                <hr style="background-color:#ffffff;">
+                <div class="row" style="margin-right:0px;margin-left:0px;">
+                    <div class="col-5">
+                        <h3 style="color:rgb(255,255,255);">Collaborative</h3>
+                    </div>
+                    <div class="col">
+                        <p style="color:rgb(255,255,255);">Partial Project Management<br></p>
+                    </div>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><i class="fa fa-database icon" style="color:rgb(255,255,255);"></i>
-                    <h3 class="name">Data &amp; Campain Management</h3>
-                    <p class="description">Customer acquisition, up-sell, cross-sell, retention and referral programs <br>Data management and data analytics</p>
+                <hr style="background-color:#ffffff;">
+                <div class="row" style="margin-right:0px;margin-left:0px;">
+                    <div class="col-5">
+                        <h3 style="color:rgb(255,255,255);">Advisory</h3>
+                    </div>
+                    <div class="col">
+                        <p style="color:rgb(255,255,255);">Project Planning<br></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="align-content-center container" id="about" style="width:100%;height:100%;padding-top:60px;padding-bottom:60px;">
+        <h1 class="text-center" style="color:#0088a6;">Our story</h1>
+        <p class="lead text-center" style="margin-right:auto;margin-left:auto;color:rgb(75,76,77);"><br>An organization exists because of its customers. So, it’s but natural to nurture relationships with customers right from the prospecting stage. And, by bringing in a customer-centric approach in whatever you do, will definitely create more
+            customer advocates for your business. <br>We are passionate about it and we help you to achieve it. We deliver more customer advocates through our advisory and implementation services in Customer Loyalty and Customer Experience. We believe
+            and practice the outside-in approach that revolves around human-centric design.<br>Speak with us today to understand how it can be done in your organization. <br></p>
+    </div>
+    <div style="margin-top:20px;">
+        <div class="row" style="width:100%;margin-left:0px;">
+            <div class="col-5 col-sm-12 col-md-5 col-lg-5" style="padding:0px;background-color:#0088a6;padding-left:45px;">
+                <h1 style="padding-bottom:20px;background-color:rgba(255,255,255,0);color:rgb(255,255,255);"><br>Let's Talk</h1>
+            </div>
+            <div class="col" style="padding:0px;padding-top:20px;padding-bottom:20px;background-color:#565656;">
+                <div class="row" style="margin-right:0px;margin-left:0px;">
+                    <div class="col-2">
+                        <h3 style="color:rgb(255,255,255);">Call</h3>
+                    </div>
+                    <div class="col">
+                        <h4 style="color:rgb(255,255,255);">+91 98700 14338<br></h4>
+                    </div>
+                </div>
+                <div class="row" style="margin-right:0px;margin-left:0px;">
+                    <div class="col-2">
+                        <h3 style="color:rgb(255,255,255);">Email</h3>
+                    </div>
+                    <div class="col">
+                        <h4 style="color:rgb(255,255,255);">hello@simplirewards.com<br></h4>
+                    </div>
                 </div>
             </div>
         </div>
@@ -85,21 +144,6 @@
         <footer>
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-sm-4 col-md-3 item">
-                        <h3>Services</h3>
-                        <ul>
-                            <li><a href="#">Customer Experience</a></li>
-                            <li><a href="#">Loyalty &amp; Rewards Programs</a></li>
-                            <li><a href="#">Data &amp; Campaign Management</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4 col-md-3 item">
-                        <h3>About</h3>
-                        <ul>
-                            <li><a href="#">Company</a></li>
-                            <li><a href="#">Team</a></li>
-                        </ul>
-                    </div>
                     <div class="col-lg-6 item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-linkedin"></i></a>
                         <p class="copyright">simplirewards © 2018 | by Vishal Bhosle</p>
                     </div>
@@ -109,7 +153,6 @@
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bs-animation.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
 </body>
 
