--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         </div>
     </nav>
-    <div style="height:100%;width:100%;background-color:rgb(98,2,255);padding-top:200px;padding-bottom:200px;color:rgb(234,234,235);">
+    <div style="height:100%;width:100%;background-color:rgb(98,2,255);padding-top:200px;padding-bottom:200px;color:rgb(234,234,235);padding-left:20px;">
         <h1 class="text-left">What is your Best Competitive Advantage?<br></h1>
         <h1 class="text-left">What are the Key Pillars of your business sustenance?<br></h1>
         <h1 class="text-left">How would you see Future of your business?<br></h1>
