--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
     <div style="margin-top:20px;">
         <div class="row" style="margin-right:0px;margin-left:0px;">
-            <div class="col-5" style="padding:0px;background-color:#0088a6;">
+            <div class="col-auto col-sm-12 col-md-12 col-lg-5 col-xl-5" style="padding:0px;background-color:#0088a6;">
                 <h1 style="padding:50px;padding-top:20px;padding-bottom:20px;background-color:rgba(255,255,255,0);color:rgb(255,255,255);"><br><strong>Engagement</strong><br><strong>Models</strong><br><br></h1>
             </div>
             <div class="col" style="padding:20px0px;padding-top:20px;padding-bottom:20px;padding-left:20px;background-color:#565656;padding-right:20px;width:100%;">
@@ -117,7 +117,7 @@
     </div>
     <div style="margin-top:20px;">
         <div class="row" style="width:100%;margin-left:0px;">
-            <div class="col-5 col-sm-12 col-md-5 col-lg-5" style="padding:0px;background-color:#0088a6;padding-left:45px;">
+            <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5" style="padding:0px;background-color:#0088a6;padding-left:45px;">
                 <h1 style="padding-bottom:20px;background-color:rgba(255,255,255,0);color:rgb(255,255,255);"><br>Let's Talk</h1>
             </div>
             <div class="col" style="padding:0px;padding-top:20px;padding-bottom:20px;background-color:#565656;">
