--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>simplirewards</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
     <link rel="stylesheet" href="assets/css/Article-Clean.css">
     <link rel="stylesheet" href="assets/css/Features-Blue.css">
     <link rel="stylesheet" href="assets/css/Footer-Clean.css">
@@ -17,13 +19,12 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body style="margin-top:10;">
+<body style="margin-top:10;font-family:'Open Sans', sans-serif;">
     <nav class="navbar navbar-light navbar-expand-md sticky-top bg-white">
         <div class="container"><a class="navbar-brand" href="#"><img src="assets/img/logo.png" height="60"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Services</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="#heading">Clients</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Engagment</a></li>
@@ -32,39 +33,39 @@
         </div>
         </div>
     </nav>
-    <div style="height:100%;width:100%;background-color:rgb(98,2,255);padding-top:200px;padding-bottom:200px;color:rgb(234,234,235);padding-left:20px;">
-        <h1 class="text-left">What is your Best Competitive Advantage?<br></h1>
-        <h1 class="text-left">What are the Key Pillars of your business sustenance?<br></h1>
-        <h1 class="text-left">How would you see Future of your business?<br></h1>
+    <div style="height:100%;width:100%;background-color:#ec407a;padding-top:200px;padding-bottom:200px;color:rgb(234,234,235);padding-left:20px;">
+        <h1 class="text-left" style="font-family:Dosis, sans-serif;">What is your Best Competitive Advantage?<br></h1>
+        <h1 class="text-left" style="font-family:Dosis, sans-serif;">What are the Key Pillars of your business sustenance?<br></h1>
+        <h1 class="text-left" style="font-family:Dosis, sans-serif;">How would you see Future of your business?<br></h1>
     </div>
-    <div id="services" class="features-blue" style="background-color:#0088a6;">
+    <div class="container" style="margin-top:40px;margin-bottom:40px;">
+        <p>While there are multiple answers for each of these questions, a constant element across these answers would either be Customer or related to Customers. Right?<br>So what you do today for your customers going to decide your business future. We
+            at Simplirewards just help you to do that!<br></p>
+    </div>
+    <div id="services" class="features-blue" style="background-color:#2c3134;">
         <div class="container">
-            <div class="intro">
-                <h2 class="text-center">Services</h2>
+            <div class="intro" style="margin-right:0px;margin-left:20px;">
+                <h2 class="text-left" style="font-family:Dosis, sans-serif;">Services</h2>
             </div>
             <div class="row features">
-                <div class="col-sm-6 col-md-4 item" style="padding-left:40px;">
-                    <h3 class="name">Customer Experience</h3>
-                    <p class="description">Customer Experience Assessment <br>Customer Experience Management <br>Customer Experience Training <br>VoC (Voice of Customer) / CSAT Programs</p>
+                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 item" style="padding-left:40px;">
+                    <h3 class="name" style="font-family:Dosis, sans-serif;">Customer Experience</h3>
+                    <p class="description" style="font-family:'Open Sans', sans-serif;">Customer Experience Assessment <br>Customer Experience Management <br>Customer Experience Training <br>VoC (Voice of Customer) / CSAT Programs</p>
                 </div>
-                <div class="col-sm-6 col-md-4 item" style="padding-left:40px;">
-                    <h3 class="name">Loyalty &amp; Rewards Program</h3>
-                    <p class="description">Loyalty Program Audits <br>Loyalty Program strategy, planning &amp; management <br>Rewards management</p>
-                </div>
-                <div class="col-sm-6 col-md-4 item" style="padding-left:40px;">
-                    <h3 class="name">Data &amp; Campain Management</h3>
-                    <p class="description">Customer acquisition, up-sell, cross-sell, retention and referral programs <br>Data management and data analytics</p>
+                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 item" style="padding-left:40px;">
+                    <h3 class="name" style="font-family:Dosis, sans-serif;">Loyalty &amp; Rewards Program</h3>
+                    <p class="description" style="font-family:'Open Sans', sans-serif;">Loyalty Program Audits <br>Loyalty Program strategy, planning &amp; management <br>Rewards management</p>
                 </div>
             </div>
         </div>
     </div>
     <div id="heading" class="photo-gallery" style="padding-top:30px;">
         <div class="container">
-            <div class="intro" style="/*width:700px;*//*margin-right:306px;*/">
-                <h1 class="text-center" style="color:#0088a6;">Clients</h1>
-            </div>
+            <div class="intro" style="/*width:700px;*//*margin-right:306px;*/"></div>
             <div class="row photos">
-                <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item"><img class="img-fluid" src="assets/img/desk.jpg"></div>
+                <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item" style="border:10px;">
+                    <h1 class="text-center" style="font-family:Dosis, sans-serif;margin-top:20%;font-weight:bold;color:#ec407a;">Clients</h1>
+                </div>
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item"><img class="img-fluid" src="assets/img/building.jpg"></div>
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item"><img class="img-fluid" src="assets/img/loft.jpg"></div>
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item"><img class="img-fluid" src="assets/img/building.jpg"></div>
@@ -76,51 +77,51 @@
     </div>
     <div style="margin-top:20px;">
         <div class="row" style="margin-right:0px;margin-left:0px;">
-            <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5" style="padding:0px;background-color:#0088a6;">
-                <h1 style="padding:50px;padding-top:20px;padding-bottom:20px;background-color:rgba(255,255,255,0);color:rgb(255,255,255);"><br><strong>Engagement</strong><br><strong>Models</strong><br><br></h1>
+            <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5" style="padding:0px;background-color:#ec407a;">
+                <h1 style="padding:50px;padding-top:20px;padding-bottom:20px;background-color:rgba(255,255,255,0);color:rgb(255,255,255);font-family:Dosis, sans-serif;"><br><strong>Engagement</strong><br><strong>Models</strong><br><br></h1>
             </div>
-            <div class="col" style="padding:20px0px;padding-top:20px;padding-bottom:20px;padding-left:20px;background-color:#565656;padding-right:20px;width:100%;">
+            <div class="col" style="padding:20px0px;padding-top:20px;padding-bottom:20px;padding-left:20px;background-color:#2c3134;padding-right:20px;width:100%;">
                 <div class="row" style="margin-right:0px;margin-left:0px;">
                     <div class="col-5">
-                        <h3 style="color:rgb(255,255,255);">Turnkey</h3>
+                        <h3 style="color:rgb(255,255,255);font-family:Dosis, sans-serif;">Turnkey</h3>
                     </div>
-                    <div class="col">
-                        <p style="color:rgb(255,255,255);">End-to-End ProjectManagement<br></p>
+                    <div class="col align-self-center">
+                        <p style="color:rgb(255,255,255);font-family:'Open Sans', sans-serif;">End-to-End ProjectManagement<br></p>
                     </div>
                 </div>
                 <hr style="background-color:#ffffff;">
                 <div class="row" style="margin-right:0px;margin-left:0px;">
                     <div class="col-5">
-                        <h3 style="color:rgb(255,255,255);">Collaborative</h3>
+                        <h3 style="color:rgb(255,255,255);font-family:Dosis, sans-serif;">Collaborative</h3>
                     </div>
-                    <div class="col">
-                        <p style="color:rgb(255,255,255);">Partial Project Management<br></p>
+                    <div class="col align-self-stretch">
+                        <p style="color:rgb(255,255,255);font-family:'Open Sans', sans-serif;">Partial Project Management<br></p>
                     </div>
                 </div>
                 <hr style="background-color:#ffffff;">
                 <div class="row" style="margin-right:0px;margin-left:0px;">
                     <div class="col-5">
-                        <h3 style="color:rgb(255,255,255);">Advisory</h3>
+                        <h3 style="color:rgb(255,255,255);font-family:Dosis, sans-serif;">Advisory</h3>
                     </div>
                     <div class="col">
-                        <p style="color:rgb(255,255,255);">Project Planning<br></p>
+                        <p style="color:rgb(255,255,255);font-family:'Open Sans', sans-serif;">Project Planning<br></p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="align-content-center container" id="about" style="width:100%;height:100%;padding-top:60px;padding-bottom:60px;">
-        <h1 class="text-center" style="color:#0088a6;">Our story</h1>
-        <p class="lead text-center" style="margin-right:auto;margin-left:auto;color:rgb(75,76,77);"><br>An organization exists because of its customers. So, it’s but natural to nurture relationships with customers right from the prospecting stage. And, by bringing in a customer-centric approach in whatever you do, will definitely create more
+        <h1 class="text-left" style="color:#ec407a;font-family:Dosis, sans-serif;font-weight:bold;">Our story</h1>
+        <p class="lead text-left" style="margin-right:auto;margin-left:auto;color:rgb(75,76,77);font-family:'Open Sans', sans-serif;"><br>An organization exists because of its customers. So, it’s but natural to nurture relationships with customers right from the prospecting stage. And, by bringing in a customer-centric approach in whatever you do, will definitely create more
             customer advocates for your business. <br>We are passionate about it and we help you to achieve it. We deliver more customer advocates through our advisory and implementation services in Customer Loyalty and Customer Experience. We believe
             and practice the outside-in approach that revolves around human-centric design.<br>Speak with us today to understand how it can be done in your organization. <br></p>
     </div>
     <div style="margin-top:20px;">
         <div class="row" style="width:100%;margin-left:0px;">
-            <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5" style="padding:0px;background-color:#0088a6;padding-left:45px;">
-                <h1 style="padding-bottom:20px;background-color:rgba(255,255,255,0);color:rgb(255,255,255);"><br>Let's Talk</h1>
+            <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5" style="padding:0px;background-color:#ec407a;padding-left:45px;padding-top:15px;">
+                <h1 style="padding:0px;padding-top:20px;padding-bottom:20px;background-color:rgba(255,255,255,0);color:rgb(255,255,255);font-family:Dosis, sans-serif;"><strong>Let's Talk</strong><br></h1>
             </div>
-            <div class="col" style="padding:0px;padding-top:20px;padding-bottom:20px;background-color:#565656;">
+            <div class="col" style="padding:0px;padding-top:20px;padding-bottom:20px;background-color:#2c3134;">
                 <div class="row" style="margin-right:0px;margin-left:0px;">
                     <div class="col-2">
                         <h3 style="color:rgb(255,255,255);">Call</h3>
