--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         </div>
     </nav>
     <div style="height:100%;width:100%;background-color:#ec407a;padding-top:200px;padding-bottom:200px;color:rgb(234,234,235);padding-left:20px;">
-        <h1 class="text-left" style="font-family:Dosis, sans-serif;">What is your Best Competitive Advantage?<br></h1>
-        <h1 class="text-left" style="font-family:Dosis, sans-serif;">What are the Key Pillars of your business sustenance?<br></h1>
-        <h1 class="text-left" style="font-family:Dosis, sans-serif;">How would you see Future of your business?<br></h1>
+        <h1 style="font-family:Dosis, sans-serif;color:rgb(255,255,255);margin-bottom:10px;">What is your&nbsp;<span style="font-weight:bold;">Best Competitive Advantage</span>&nbsp;?</h1>
+        <h1 style="font-family:Dosis, sans-serif;color:rgb(255,255,255);margin-bottom:10px;">What are the&nbsp;<span style="font-weight:bold;">Key Pillars</span>&nbsp;of your business sustenance ?</h1>
+        <h1 style="font-family:Dosis, sans-serif;color:rgb(255,255,255);margin-bottom:10px;">How would you see&nbsp;<span style="font-weight:bold;">Future</span>&nbsp;of your business ?</h1>
     </div>
     <div class="container" style="margin-top:40px;margin-bottom:40px;">
         <p>While there are multiple answers for each of these questions, a constant element across these answers would either be Customer or related to Customers. Right?<br>So what you do today for your customers going to decide your business future. We
