--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body style="margin-top:10;font-family:'Open Sans', sans-serif;">
     <nav class="navbar navbar-light navbar-expand-md sticky-top bg-white">
-        <div class="container"><a class="navbar-brand" href="#"><img src="assets/img/logo.png" height="60"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand" href="#"><img src="assets/img/logo.png" height="60" style="height:70px;"></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
@@ -33,28 +33,34 @@
         </div>
         </div>
     </nav>
-    <div style="height:100%;width:100%;background-color:#ec407a;padding-top:200px;padding-bottom:200px;color:rgb(234,234,235);padding-left:20px;">
-        <h1 style="font-family:Dosis, sans-serif;color:rgb(255,255,255);margin-bottom:10px;">What is your&nbsp;<span style="font-weight:bold;">Best Competitive Advantage</span>&nbsp;?</h1>
-        <h1 style="font-family:Dosis, sans-serif;color:rgb(255,255,255);margin-bottom:10px;">What are the&nbsp;<span style="font-weight:bold;">Key Pillars</span>&nbsp;of your business sustenance ?</h1>
-        <h1 style="font-family:Dosis, sans-serif;color:rgb(255,255,255);margin-bottom:10px;">How would you see&nbsp;<span style="font-weight:bold;">Future</span>&nbsp;of your business ?</h1>
+    <div style="width:100%;background-color:#ec407a;padding-top:100px;padding-bottom:100px;color:rgb(234,234,235);padding-left:20px;">
+        <div class="container">
+            <h1 style="font-family:Dosis, sans-serif;color:rgb(255,255,255);margin-bottom:20px;">What is your&nbsp;<span style="font-weight:bold;">Best Competitive Advantage</span>&nbsp;?</h1>
+            <h1 style="font-family:Dosis, sans-serif;color:rgb(255,255,255);margin-bottom:20px;">What are the&nbsp;<span style="font-weight:bold;">Key Pillars</span>&nbsp;of your business sustenance ?</h1>
+            <h1 style="font-family:Dosis, sans-serif;color:rgb(255,255,255);margin-bottom:20px;">How would you see&nbsp;<span style="font-weight:bold;">Future</span>&nbsp;of your business ?</h1>
+        </div>
     </div>
-    <div class="container" style="margin-top:40px;margin-bottom:40px;">
-        <p>While there are multiple answers for each of these questions, a constant element across these answers would either be Customer or related to Customers. Right?<br>So what you do today for your customers going to decide your business future. We
-            at Simplirewards just help you to do that!<br></p>
+    <div class="container" style="margin-top:40px;margin-bottom:40px;font-family:'Open Sans', sans-serif;">
+        <p style="font-size:20px;color:rgb(75,76,77);">While there are multiple answers for each of these questions, a constant element across these answers would either be Customer or related to Customers. Right?<br></p>
+        <p style="font-size:20px;color:rgb(75,76,77);">So what you do today for your customers going to decide your business future. We at Simplirewards just help you to do that!<br></p>
     </div>
-    <div id="services" class="features-blue" style="background-color:#2c3134;">
+    <div id="services" class="features-blue" style="background-color:#2c3134;height:100%;">
         <div class="container">
             <div class="intro" style="margin-right:0px;margin-left:20px;">
-                <h2 class="text-left" style="font-family:Dosis, sans-serif;">Services</h2>
+                <h2 class="text-left" style="font-family:Dosis, sans-serif;font-size:40px;">Services</h2>
             </div>
             <div class="row features">
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 item" style="padding-left:40px;">
                     <h3 class="name" style="font-family:Dosis, sans-serif;">Customer Experience</h3>
-                    <p class="description" style="font-family:'Open Sans', sans-serif;">Customer Experience Assessment <br>Customer Experience Management <br>Customer Experience Training <br>VoC (Voice of Customer) / CSAT Programs</p>
+                    <p>Your customer journey begins much before the door or first click or the first tap and <br>ends much after the door or the last click or the last tap. <br> <br>Simplirewards partners with you on the end-to-end customer journey.</p>
+                    <p
+                        class="description" style="font-family:'Open Sans', sans-serif;">Customer Experience Assessment <br>Customer Journey Mapping<br>Customer Experience Training&nbsp;Service Design Thinking<br>VoC (Voice of Customer) / CSAT Programs</p>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 item" style="padding-left:40px;">
                     <h3 class="name" style="font-family:Dosis, sans-serif;">Loyalty &amp; Rewards Program</h3>
-                    <p class="description" style="font-family:'Open Sans', sans-serif;">Loyalty Program Audits <br>Loyalty Program strategy, planning &amp; management <br>Rewards management</p>
+                    <p>You would know the numbers of top line and bottom line. Do you know repeat <br>customers or value of business lost due to customer churn during last month? <br> <br>Simplirewards partners with you to launch and manage customer loyalty
+                        and <br>rewards program helping you retain and expand the value from each customer.</p>
+                    <p class="description" style="font-family:'Open Sans', sans-serif;">Loyalty Program Audits <br>Loyalty Program Strategy &amp; Management <br>Rewards Management</p>
                 </div>
             </div>
         </div>
@@ -63,22 +69,24 @@
         <div class="container">
             <div class="intro" style="/*width:700px;*//*margin-right:306px;*/"></div>
             <div class="row photos">
-                <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item" style="border:10px;">
-                    <h1 class="text-center" style="font-family:Dosis, sans-serif;margin-top:20%;font-weight:bold;color:#ec407a;">Clients</h1>
+                <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item">
+                    <h1 class="text-center" style="font-family:Dosis, sans-serif;font-weight:bold;color:#ec407a;width:100%;height:100%;border:2px solid;padding-top:23%;">Clients</h1>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item"><img class="img-fluid" src="assets/img/building.jpg"></div>
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item"><img class="img-fluid" src="assets/img/loft.jpg"></div>
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item"><img class="img-fluid" src="assets/img/building.jpg"></div>
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item"><img class="img-fluid" src="assets/img/loft.jpg"></div>
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item"><img class="img-fluid" src="assets/img/desk.jpg"></div>
-                <div class="col-4 offset-5"><button class="btn btn-outline-primary" type="button" style="width:144px;">And more</button></div>
+                <div class="col-4">
+                    <h4 style="color:#ec407a;">And more</h4>
+                </div>
             </div>
         </div>
     </div>
     <div style="margin-top:20px;">
         <div class="row" style="margin-right:0px;margin-left:0px;">
             <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5" style="padding:0px;background-color:#ec407a;">
-                <h1 style="padding:50px;padding-top:20px;padding-bottom:20px;background-color:rgba(255,255,255,0);color:rgb(255,255,255);font-family:Dosis, sans-serif;"><br><strong>Engagement</strong><br><strong>Models</strong><br><br></h1>
+                <h1 class="text-center" style="padding:50px;padding-top:20px;padding-bottom:20px;background-color:rgba(255,255,255,0);color:rgb(255,255,255);font-family:Dosis, sans-serif;"><br><strong>Engagement</strong><br><strong>Models</strong><br><br></h1>
             </div>
             <div class="col" style="padding:20px0px;padding-top:20px;padding-bottom:20px;padding-left:20px;background-color:#2c3134;padding-right:20px;width:100%;">
                 <div class="row" style="margin-right:0px;margin-left:0px;">
@@ -86,7 +94,7 @@
                         <h3 style="color:rgb(255,255,255);font-family:Dosis, sans-serif;">Turnkey</h3>
                     </div>
                     <div class="col align-self-center">
-                        <p style="color:rgb(255,255,255);font-family:'Open Sans', sans-serif;">End-to-End ProjectManagement<br></p>
+                        <p style="color:rgb(255,255,255);font-family:'Open Sans', sans-serif;">End-to-End Project Management<br></p>
                     </div>
                 </div>
                 <hr style="background-color:#ffffff;">
@@ -104,7 +112,7 @@
                         <h3 style="color:rgb(255,255,255);font-family:Dosis, sans-serif;">Advisory</h3>
                     </div>
                     <div class="col">
-                        <p style="color:rgb(255,255,255);font-family:'Open Sans', sans-serif;">Project Planning<br></p>
+                        <p style="color:rgb(255,255,255);font-family:'Open Sans', sans-serif;">Project Consultancy and Hand-Holding<br></p>
                     </div>
                 </div>
             </div>
@@ -113,18 +121,18 @@
     <div class="align-content-center container" id="about" style="width:100%;height:100%;padding-top:60px;padding-bottom:60px;">
         <h1 class="text-left" style="color:#ec407a;font-family:Dosis, sans-serif;font-weight:bold;">Our story</h1>
         <p class="lead text-left" style="margin-right:auto;margin-left:auto;color:rgb(75,76,77);font-family:'Open Sans', sans-serif;"><br>An organization exists because of its customers. So, it’s but natural to nurture relationships with customers right from the prospecting stage. And, by bringing in a customer-centric approach in whatever you do, will definitely create more
-            customer advocates for your business. <br>We are passionate about it and we help you to achieve it. We deliver more customer advocates through our advisory and implementation services in Customer Loyalty and Customer Experience. We believe
-            and practice the outside-in approach that revolves around human-centric design.<br>Speak with us today to understand how it can be done in your organization. <br></p>
+            customer advocates for your business.&nbsp;<br><br>We are passionate about it and we help you to achieve it. We deliver more customer advocates through our advisory and implementation services in Customer Loyalty and Customer Experience. We
+            believe and practice the outside-in approach that revolves around human-centric design.<br><br>Speak with us today to understand how it can be done in your organization. <br></p>
     </div>
     <div style="margin-top:20px;">
         <div class="row" style="width:100%;margin-left:0px;">
             <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5" style="padding:0px;background-color:#ec407a;padding-left:45px;padding-top:15px;">
-                <h1 style="padding:0px;padding-top:20px;padding-bottom:20px;background-color:rgba(255,255,255,0);color:rgb(255,255,255);font-family:Dosis, sans-serif;"><strong>Let's Talk</strong><br></h1>
+                <h1 class="text-center" style="padding:0px;padding-top:20px;padding-bottom:20px;background-color:rgba(255,255,255,0);color:rgb(255,255,255);font-family:Dosis, sans-serif;"><strong>Let's Talk</strong><br></h1>
             </div>
-            <div class="col" style="padding:0px;padding-top:20px;padding-bottom:20px;background-color:#2c3134;">
-                <div class="row" style="margin-right:0px;margin-left:0px;">
+            <div class="col" style="padding:0px;padding-top:20px;padding-bottom:20px;background-color:#2c3134;padding-left:20px;">
+                <div class="row" style="margin-right:0px;margin-left:0px;margin-bottom:10px;">
                     <div class="col-2">
-                        <h3 style="color:rgb(255,255,255);">Call</h3>
+                        <h3 style="color:rgb(255,255,255);font-family:Dosis, sans-serif;">Call</h3>
                     </div>
                     <div class="col">
                         <h4 style="color:rgb(255,255,255);">+91 98700 14338<br></h4>
@@ -132,7 +140,7 @@
                 </div>
                 <div class="row" style="margin-right:0px;margin-left:0px;">
                     <div class="col-2">
-                        <h3 style="color:rgb(255,255,255);">Email</h3>
+                        <h3 style="color:rgb(255,255,255);font-family:Dosis, sans-serif;">Emai</h3>
                     </div>
                     <div class="col">
                         <h4 style="color:rgb(255,255,255);">hello@simplirewards.com<br></h4>
