--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Services</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#services">Services</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="#heading">Clients</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Engagment</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#">About</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#engagement">Engagment</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#about">About</a></li>
                 </ul>
         </div>
         </div>
@@ -41,52 +41,82 @@
         </div>
     </div>
     <div class="container" style="margin-top:40px;margin-bottom:40px;font-family:'Open Sans', sans-serif;">
-        <p style="font-size:20px;color:rgb(75,76,77);">While there are multiple answers for each of these questions, a constant element across these answers would either be Customer or related to Customers. Right?<br></p>
-        <p style="font-size:20px;color:rgb(75,76,77);">So what you do today for your customers going to decide your business future. We at Simplirewards just help you to do that!<br></p>
+        <p class="lead text-left" style="margin-right:auto;margin-left:auto;color:rgb(75,76,77);font-family:'Open Sans', sans-serif;">While there are multiple answers for each of these questions, a constant element across these answers would either be Customer or related to Customers. Right?<br><br>So what you do today for your customers going to decide your business future.
+            We at Simplirewards just help you to do that!<br></p>
     </div>
     <div id="services" class="features-blue" style="background-color:#2c3134;height:100%;">
-        <div class="container">
+        <div class="container" style="padding-left:0px;">
             <div class="intro" style="margin-right:0px;margin-left:20px;">
                 <h2 class="text-left" style="font-family:Dosis, sans-serif;font-size:40px;">Services</h2>
             </div>
             <div class="row features">
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 item" style="padding-left:40px;">
                     <h3 class="name" style="font-family:Dosis, sans-serif;">Customer Experience</h3>
-                    <p>Your customer journey begins much before the door or first click or the first tap and <br>ends much after the door or the last click or the last tap. <br> <br>Simplirewards partners with you on the end-to-end customer journey.</p>
-                    <p
-                        class="description" style="font-family:'Open Sans', sans-serif;">Customer Experience Assessment <br>Customer Journey Mapping<br>Customer Experience Training&nbsp;Service Design Thinking<br>VoC (Voice of Customer) / CSAT Programs</p>
+                    <p>Your customer journey begins much before the door or first click or the first tap and ends much after the door or the last click or the last tap. <br> <br>Simplirewards partners with you on the end-to-end customer journey.</p>
+                    <p class="description"
+                        style="font-family:'Open Sans', sans-serif;color:#ffffff;">Customer Experience Assessment <br>Customer Journey Mapping<br>Customer Experience Training&nbsp;<br>Service Design Thinking<br>VoC (Voice of Customer) / CSAT Programs</p>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 item" style="padding-left:40px;">
                     <h3 class="name" style="font-family:Dosis, sans-serif;">Loyalty &amp; Rewards Program</h3>
-                    <p>You would know the numbers of top line and bottom line. Do you know repeat <br>customers or value of business lost due to customer churn during last month? <br> <br>Simplirewards partners with you to launch and manage customer loyalty
+                    <p>You would know the numbers of top line and bottom line. Do you know repeat customers or value of business lost due to customer churn during last month? <br> <br>Simplirewards partners with you to launch and manage customer loyalty
                         and <br>rewards program helping you retain and expand the value from each customer.</p>
-                    <p class="description" style="font-family:'Open Sans', sans-serif;">Loyalty Program Audits <br>Loyalty Program Strategy &amp; Management <br>Rewards Management</p>
+                    <p class="description" style="font-family:'Open Sans', sans-serif;color:#ffffff;">Loyalty Program Audits <br>Loyalty Program Strategy &amp; Management <br>Rewards Management</p>
                 </div>
             </div>
         </div>
     </div>
-    <div id="heading" class="photo-gallery" style="padding-top:30px;">
+    <div id="heading" class="photo-gallery" style="padding-top:30px;background-color:ṭ;">
         <div class="container">
             <div class="intro" style="/*width:700px;*//*margin-right:306px;*/"></div>
             <div class="row photos">
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item">
                     <h1 class="text-center" style="font-family:Dosis, sans-serif;font-weight:bold;color:#ec407a;width:100%;height:100%;border:2px solid;padding-top:23%;">Clients</h1>
                 </div>
-                <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item"><img class="img-fluid" src="assets/img/building.jpg"></div>
-                <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item"><img class="img-fluid" src="assets/img/loft.jpg"></div>
-                <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item"><img class="img-fluid" src="assets/img/building.jpg"></div>
-                <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item"><img class="img-fluid" src="assets/img/loft.jpg"></div>
-                <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item"><img class="img-fluid" src="assets/img/desk.jpg"></div>
-                <div class="col-4">
-                    <h4 style="color:#ec407a;">And more</h4>
+                <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item">
+                    <div><img class="img-fluid" src="assets/img/Automotive.jpeg">
+                        <div class="carousel-caption">
+                            <h1 style="background-color:rgba(57,57,57,0.38);"><br>Automotive<br><br></h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item">
+                    <div><img class="img-fluid" src="assets/img/BFSI.jpg">
+                        <div class="carousel-caption">
+                            <h1 style="background-color:rgba(57,57,57,0.38);"><br>BFSI<br><br></h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item">
+                    <div><img class="img-fluid" src="assets/img/Real Estate.jpeg">
+                        <div class="carousel-caption">
+                            <h1 style="background-color:rgba(57,57,57,0.38);"><br>Real Estate<br><br></h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item">
+                    <div><img class="img-fluid" src="assets/img/IT & ITES.jpeg">
+                        <div class="carousel-caption">
+                            <h1 style="background-color:rgba(57,57,57,0.38);"><br>IT &amp; ITES<br><br></h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item">
+                    <div><img class="img-fluid" src="assets/img/FMCG.jpg">
+                        <div class="carousel-caption">
+                            <h1 style="background-color:rgba(57,57,57,0.38);"><br>FMCG<br><br></h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <h4 class="text-right" style="color:#ec407a;">And more</h4>
                 </div>
             </div>
         </div>
     </div>
     <div style="margin-top:20px;">
-        <div class="row" style="margin-right:0px;margin-left:0px;">
-            <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5" style="padding:0px;background-color:#ec407a;">
-                <h1 class="text-center" style="padding:50px;padding-top:20px;padding-bottom:20px;background-color:rgba(255,255,255,0);color:rgb(255,255,255);font-family:Dosis, sans-serif;"><br><strong>Engagement</strong><br><strong>Models</strong><br><br></h1>
+        <div class="row" style="margin-right:0px;margin-left:0px;/*max-width:1140px;*/padding-right:auto;padding-left:auto;">
+            <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5" id="engagement" style="padding:0px;background-color:#ec407a;padding-top:20px;padding-left:50px;">
+                <h1 class="text-left" style="/*padding-bottom:inherit;*/color:rgb(255,255,255);font-family:Dosis, sans-serif;"><br><strong>Engagement</strong><br><strong>Models</strong><br><br></h1>
             </div>
             <div class="col" style="padding:20px0px;padding-top:20px;padding-bottom:20px;padding-left:20px;background-color:#2c3134;padding-right:20px;width:100%;">
                 <div class="row" style="margin-right:0px;margin-left:0px;">
@@ -127,7 +157,7 @@
     <div style="margin-top:20px;">
         <div class="row" style="width:100%;margin-left:0px;">
             <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5" style="padding:0px;background-color:#ec407a;padding-left:45px;padding-top:15px;">
-                <h1 class="text-center" style="padding:0px;padding-top:20px;padding-bottom:20px;background-color:rgba(255,255,255,0);color:rgb(255,255,255);font-family:Dosis, sans-serif;"><strong>Let's Talk</strong><br></h1>
+                <h1 class="text-left" style="padding:0px;padding-top:20px;padding-bottom:20px;background-color:rgba(255,255,255,0);color:rgb(255,255,255);font-family:Dosis, sans-serif;"><strong>Let's Talk</strong><br></h1>
             </div>
             <div class="col" style="padding:0px;padding-top:20px;padding-bottom:20px;background-color:#2c3134;padding-left:20px;">
                 <div class="row" style="margin-right:0px;margin-left:0px;margin-bottom:10px;">
