--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 item" style="padding-left:40px;">
                     <h3 class="name" style="font-family:Dosis, sans-serif;">Loyalty &amp; Rewards Program</h3>
                     <p>You would know the numbers of top line and bottom line. Do you know repeat customers or value of business lost due to customer churn during last month? <br> <br>Simplirewards partners with you to launch and manage customer loyalty
-                        and <br>rewards program helping you retain and expand the value from each customer.</p>
+                        and rewards program helping you retain and expand the value from each customer.</p>
                     <p class="description" style="font-family:'Open Sans', sans-serif;color:#ffffff;">Loyalty Program Audits <br>Loyalty Program Strategy &amp; Management <br>Rewards Management</p>
                 </div>
             </div>
@@ -70,40 +70,40 @@
             <div class="intro" style="/*width:700px;*//*margin-right:306px;*/"></div>
             <div class="row photos">
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item">
-                    <h1 class="text-center" style="font-family:Dosis, sans-serif;font-weight:bold;color:#ec407a;width:100%;height:100%;border:2px solid;padding-top:23%;">Clients</h1>
+                    <h1 class="text-center" style="font-family:Dosis, sans-serif;font-weight:bold;color:#ffffff;width:100%;height:100%;border:2px solid;padding-top:23%;background-color:#ec407a;">Clients</h1>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item">
                     <div><img class="img-fluid" src="assets/img/Automotive.jpeg">
                         <div class="carousel-caption">
-                            <h1 style="background-color:rgba(57,57,57,0.38);"><br>Automotive<br><br></h1>
+                            <h1 style="background-color:rgba(57,57,57,0.38);margin-bottom:40px;"><br>Automotive<br><br></h1>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item">
                     <div><img class="img-fluid" src="assets/img/BFSI.jpg">
                         <div class="carousel-caption">
-                            <h1 style="background-color:rgba(57,57,57,0.38);"><br>BFSI<br><br></h1>
+                            <h1 style="background-color:rgba(57,57,57,0.38);margin-bottom:40px;"><br>BFSI<br><br></h1>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item">
                     <div><img class="img-fluid" src="assets/img/Real Estate.jpeg">
                         <div class="carousel-caption">
-                            <h1 style="background-color:rgba(57,57,57,0.38);"><br>Real Estate<br><br></h1>
+                            <h1 style="background-color:rgba(57,57,57,0.38);margin-bottom:40px;"><br>Real Estate<br><br></h1>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item">
                     <div><img class="img-fluid" src="assets/img/IT & ITES.jpeg">
                         <div class="carousel-caption">
-                            <h1 style="background-color:rgba(57,57,57,0.38);"><br>IT &amp; ITES<br><br></h1>
+                            <h1 style="background-color:rgba(57,57,57,0.38);margin-bottom:40px;"><br>IT &amp; ITES<br><br></h1>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 item">
                     <div><img class="img-fluid" src="assets/img/FMCG.jpg">
                         <div class="carousel-caption">
-                            <h1 style="background-color:rgba(57,57,57,0.38);"><br>FMCG<br><br></h1>
+                            <h1 style="background-color:rgba(57,57,57,0.38);margin-bottom:40px;"><br>FMCG<br><br></h1>
                         </div>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                 </div>
                 <div class="row" style="margin-right:0px;margin-left:0px;">
                     <div class="col-2">
-                        <h3 style="color:rgb(255,255,255);font-family:Dosis, sans-serif;">Emai</h3>
+                        <h3 style="color:rgb(255,255,255);font-family:Dosis, sans-serif;">Email</h3>
                     </div>
                     <div class="col">
                         <h4 style="color:rgb(255,255,255);">hello@simplirewards.com<br></h4>
